--- a/index.html
+++ b/index.html
@@ -133,6 +133,6 @@
 		</div>
 	</main>
 	
-	<script type="text/javascript" src="./script.js"></script>
+	<script src="./script.js"></script>
 </body>
 </html>
